--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
 <body>
-    <h1>Hello</h1>
+    <h1>Hello World</h1>
+    <h6>I am kumaraaryan511. Welcome to my github page, where you can find some random things I made. I hope you like it.<h6>
 </body>
 </html>
