made site official :)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
-
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello.</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
+</head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello</h1>
     <h6>I am kumaraaryan511. Welcome to my github page, where you can find some random things I made. I hope you like it.<h6>
-</body> 
+</body>
 </html>
+    
