made the site better by adding some color to it : )

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello.</title>
+    <title>kumaraaryan511</title>
     <style>
         body {
             display: flex;
@@ -11,7 +11,7 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #d6d1ff;
         }
         h1 {
             color: #333;
