--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Hello</h1>\n
     <h6>I am kumaraaryan511. Welcome to my github page, where you can find some random things I made. I hope you like it.<h6>
 </body>
 </html>
