changes to code

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <title>kumaraaryan511</title>
     <style>
         body {
-            display: flex;
+            
             justify-content: center;
             align-items: center;
             height: 100vh;
+            padding: 1%;
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #d6d1ff;
+            
         }
         h1 {
             color: #333;
@@ -19,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>Hello</h1>\n
+    <h1>Hello</h1><br>
     <h6>I am kumaraaryan511. Welcome to my github page, where you can find some random things I made. I hope you like it.<h6>
 </body>
 </html>
