--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
     <h1>Hello</h1><br>
     <h6>I am kumaraaryan511. Welcome to my github page, where you can find some random things I made. I hope you like it.<h6>
-</body>
+         <img src="Text_image.png" alt="ASCIIavatar"> 
+    </body>
 </html>
     
