--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             width: 100%;
             height: 100%;
             background-image: url('your-gif-file.gif'); /* Path to your GIF */
-            background-repeat: repeat-y; /* Repeat vertically */
+            background-repeat: repeat; /* Repeat vertically */
             opacity: 0.3; /* Set transparency */
             z-index: 0;
         }
