--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('picture.gif'); /* Background GIF path */
+            background-image: url('Images/dancing.gif'); /* Background GIF path */
             background-size: cover;
             background-position: center;
             opacity: 0.3; /* Set the transparency of the GIF */
@@ -111,7 +111,7 @@
     </div>
     <div class="main-container">
         <div class="black-box">
-            <p>Whitepapers in progress</p>
+            <p>I have a Whitepaper in progress on an approach to prevent a combination of DDoS + brute-force password attacks for services that do not wish to employ 2FA.</p>
         </div>
     </div>
 </body>
