--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #d6d1ff;
-            background-image: url('TransparentAvatar.png');
+            /*background-image: url('TransparentAvatar.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
-            background-size: cover;
+            background-size: cover;*/
         }
 
         .purple-box {
@@ -107,6 +107,36 @@
     </div>
     <div class="black-box">
         <p>I have a Whitepaper in progress on an approach to prevent a combination of DDoS + brute-force password attacks for services that do not wish to employ 2FA.</p>
+        <p>Until then... here's a cool joke:</p>
+        <p>A man is driving down the road and breaks down near a monastery. He goes to the monastery, knocks on the door, and says, My car broke down. Do you think I could stay the night? The monks graciously accept him, feed him dinner, even fix his car. As the man tries to fall asleep, he hears a very strange sound. The next morning, he asks the monks what the sound was, but they say, We can't tell you. You're not a monk.</p>
+
+<p>The man is disappointed but thanks them anyway and goes about his merry way. Some years later, The same man breaks down in front of the same monastery. The monks again accept him, feed him, and again fix his car. That night, he hears the same strange noise that he had heard years earlier. The next morning, he asks what it is, but the monks reply, We can't tell you. You're not a monk.</p>
+
+<p>The man says, All right, all right. I'm dying to know.</p>
+
+<p>If the only way I can find out what that sound was is to become a monk, how do I become a monk?</p>
+
+<p>The monks reply, You must travel the earth and tell us how many blades of grass there are and the exact number of sand pebbles, when you find these numbers, you will become a monk. The man sets about his task. Some 54 years later, he returns and knocks on the door of the monastery.</p>
+
+<p>He says, I have traveled the earth and have found what you have asked for. There are 145,236,284,232 blades of grass and 231,281,219,999,129,382 sand pebbles on the earth.</p>
+
+<p>The monks reply, Congratulations. You are now a monk. We shall now show you the way to the sound.</p>
+
+<p>The monks lead the man to a wooden door where the head monk says, The sound is right behind that door. The man reaches for the knob, but the door is locked.</p>
+
+<p>He says, Real funny. May I have the key? The monks give him the key, and he opens the door. Behind the wooden door is another door made of stone.</p>
+
+<p>The man demands the key to the stone door. The monks give him the key, and he opens it, only to find a door made of ruby. He demands another key from the monks, who provide it.</p>
+
+<p>Behind that door is another door, this one made of sapphire, And so it went until the man had gone through doors of emerald, silver, topaz, and amethyst.</p>
+
+<p>Finally, the monks say, This is the last key to the last door.</p>
+
+<p>The man is relieved to know that he has finally reached to the end .</p>
+
+<p>He unlocks the door, turns the knob, and behind that door he is amazed to find the source of that strange sound.</p>
+
+<p>But he can't tell you what it is because you're not a monk.</p>
     </div>
 </body>
 </html>
