--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@ h6 {
     color: white;
     padding-top: 20px;
     padding-bottom: 20px;
-    border-radius: 10px;
+    border-radius: 0px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: left;
     width: 100%;
     position: relative;
     overflow: hidden;
-    margin-top: 20px; /* Add some spacing between the purple and black boxes */
+    margin-top: 0px; /* Add some spacing between the purple and black boxes */
 }
 
 .black-box::before {
@@ -106,8 +106,8 @@ h6 {
 </head>
 <body>
     <div class="purple-box">
-        <h1>Hello</h1>
-        <h6>I am kumaraaryan511. Welcome to my GitHub page, where you can find some random things I made. I hope you like it.</h6>
+        <h1>Hello.</h1>
+        <h6>That’s right. I didn’t say hello world, just hello to you. I do assume you are a part of this world, but why not be a bit more specific? The world is a pretty big place. And here is some software I have made on my journey to explore more of it every day.</h6>
     </div>
     <div class="black-box">
         <p>I have a Whitepaper in progress on an approach to prevent a combination of DDoS + brute-force password attacks for services that do not wish to employ 2FA.</p>
